# suchef-orders-status-bot

./: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
src/: config.py
src/app/: app.py  bot.py
src/app/routers/: auth.py  order_status.py  start.py
src/app/statics/messages/: auth.json
src/broadcast/: broadcast.py  process.py
src/database/: base.py
src/database/services/: db.py
src/message/: order_status.py
src/rmq/: consumer.py
src/service/: api.py
